--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.0",
         "jenssegers/mongodb": "^3.2",
+        "kitetail/zttp": "^0.2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "spatie/laravel-sluggable": "^1.5"
