--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "kitetail/zttp": "^0.2.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
         "spatie/laravel-sluggable": "^1.5"
     },
     "require-dev": {
